# lab1_sem2

./: CMakeLists.txt  check_for_errors.c  check_for_errors.h  complex.c  complex.h  controller.c  controller.h  googletests.cpp  integer.c  integer.h  main.c  makefile  matrix.c  matrix.h  typeinfo.h
Documents/c progs/lab1_sem2 copp/: complex.c  complex.h  integer.c  integer.h  main.c  makefile  matrix.c  matrix.h  typeinfo.h
